added some background styles to the home and login page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,2 +1,10 @@
 @import "tailwindcss";
 @plugin "daisyui";
+
+.gradient-bg {
+    background: radial-gradient(circle,
+            rgba(224, 202, 211, 0.1) 18%,
+            rgba(204, 198, 217, 0.1) 42%,
+            rgba(148, 187, 233, 0.1) 87%);
+    color: #000;
+}
